lab 10 part 3 updates
